feat(test): added tests for Cat command